更新了硬存和显存等信息查询接口
